--- a/index-slot14.html
+++ b/index-slot14.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="c12.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha512-lzilC+JFd6YV8+vQRNRtU7DOqv5Sa9Ek53lXt/k91HZTJpytHS1L6l1mMKR9K6VVoDt4LiEXaa6XBrYk1YhGTQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="js/filter-search.js">
 </head>
 <body>
     <header> <h1>CreativeFolk</h1></header>
@@ -23,7 +26,7 @@
         <img src="img/p9.jpg" data-tags="Aniamtors, Illustrators" alt="Ghost">
     </div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/filter-search.js"></script>
+    
+
 </body>
 </html>
