--- a/index-slot14.html
+++ b/index-slot14.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/filter-search.js"></script>
+
     <link rel="stylesheet" href="c12.css">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha512-lzilC+JFd6YV8+vQRNRtU7DOqv5Sa9Ek53lXt/k91HZTJpytHS1L6l1mMKR9K6VVoDt4LiEXaa6XBrYk1YhGTQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="js/filter-search.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.2/jquery.min.js" integrity="sha512-eqClqe36bqXg9ABERfLUfLsDuC0J9sgC2ECZmEFsw5snXC7ANYMeOijlBAcRlhctHbvHx9ZERfjBteM6U27qYg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <link rel="stylesheet" href="js/filter-search.js">
 </head>
 <body>
     <header> <h1>CreativeFolk</h1></header>
